# Terox

./: .gitignore  CMakeLists.txt  Cmakelists.txt  LICENSE  MANIFEST.in  Makefile  README.md  README_cn.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
aten/include/aten/: Aten.h  AtenCpuOperation.h
aten/src/: AtenCpuOperation.cpp
autodiff/: variable.py
project/scalar/: dataset.py  function.py  model.py  run.py
project/tensor/: dataset.py  function.py  model.py  run.py
terox/: __init__.py
terox/_C/: __init__.py  __init__.pyi  cpp_function.cpp  cpp_function.pyi  cpu.pyi  cuda_function.cu  cuda_function.pyi
terox/autodiff/: __init__.py  function.py  scalar.py  scalar_opts.py  variable.py
terox/module/: __init__.py  module.py  parameter.py
terox/nn/: __init__.py  conv.py  embed.py  linear.py  loss.py  rnn.py
terox/optim/: __init__.py  adam.py  optim.py  sgd.py
terox/tensor/: function.py  tensor.py  tensor_opts.py
test/autodiff/: test_backward.py  test_function.py  test_scalar.py  test_scalar_function.py  test_scalar_opts.py  test_scalar_overload.py
test/module/: test_module.py
test/tensor/: test_tensor.py  test_tensor_backward.py  test_tensor_boradcast.py  test_tensor_function.py  test_tensor_opts.py
