[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Terox"
version = "0.0.1"
description = "Terox"
authors = [
    { name="Tokisakix", email="2116884726@qq.com" }
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Tokisakix/Terox"
Repository = "https://github.com/Tokisakix/Terox"
Bug-Tracker = "https://github.com/Tokisakix/Terox/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["terox/"]