[metadata]
name=terox
version=0.1

[files]
packages =
    terox

[tool:pytest]
markers =
        test_scalar
        test_scalar_opts
        test_scalar_function
        test_scalar_overload
        test_scalar_backward

        test_module

        test_function
        test_tensor
        test_tensor_opts
        test_tensor_function
        test_tensor_overload
        test_tensor_backward
        test_tensor_boradcast